--- a/src/pages/about/customer-service/customer-service.html
+++ b/src/pages/about/customer-service/customer-service.html
@@ -33,15 +33,16 @@
   </div>
   <button ion-button style="width:100%" (click)="newCustomer()">
                提交
-            </button><br/>
-              <p>一：多种联系方式：400电话、微信公众号、客服管家电话和微信都可以联系我们<br/>
-二：客服管家全程参与开工和验收，把控施工质量，确保品质<br/>
-三：技术经理定期巡检工地，及时发现问题，确保质量<br/>
-四：高管联合施工巡检，检查工地施工现场<br/>
-五：定期回访客户，倾听客户心声<br/>
-六：为客户开通独立的公众号账户，轻松关注家中的施工进度<br/>
-七：您关心的问题，我们承诺24小时之内回复<br/>
-八：注册会员，完善的VIP会员福利</p>
+            </button><br/><br/><br/>
+      <p>一：多种联系方式：400电话、微信公众号、客服管家电话和微信都可以联系我们<br/> 
+          二：客服管家全程参与开工和验收，把控施工质量，确保品质
+    <br/> 三：技术经理定期巡检工地，及时发现问题，确保质量
+    <br/> 四：高管联合施工巡检，检查工地施工现场
+    <br/> 五：定期回访客户，倾听客户心声
+    <br/> 六：为客户开通独立的公众号账户，轻松关注家中的施工进度
+    <br/> 七：您关心的问题，我们承诺24小时之内回复
+    <br/> 八：注册会员，完善的VIP会员福利
+  </p>
 </ion-content>
 <ion-footer>
   <button ion-button style="width:100%;height:50px;" disabled="disabled" color="dark">客服电话：0512-66592866-818</button>
