--- a/src/shared/upload-picture/upload-picture.html
+++ b/src/shared/upload-picture/upload-picture.html
@@ -1,7 +1,9 @@
-<div class="clear-fix">
+<div >
   <div >
     <div class="file">
+  
       <input name="md-images" type="file" name="" id="" (change)="img_upload($event)">
+    
     </div>
   </div>
-</div>                 
+</div>                           
