--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -37,7 +37,7 @@
 
 
 
-      <button ion-button color="primary" (click)="toOrderInfo()">
+      <button ion-button color="primary" (click)="toOrderInfo(userOrder)">
      
             <ion-icon name="book"></ion-icon>
             进度
