--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,8 +5,9 @@
 </ion-header>
 
 <ion-content padding>
-    <ion-searchbar [(ngModel)]="search" style='border-left:0px;border-top:0px;border-right:0px;border-bottom:1px '></ion-searchbar>
-    <button ion-item (click)="toOrders(user)" *ngFor="let user of userList|filterUser:search">
+    <!-- <ion-searchbar [(ngModel)]="search" style='border-left:0px;border-top:0px;border-right:0px;border-bottom:1px '></ion-searchbar> -->
+    <!-- |filterUser:search -->
+    <button ion-item (click)="toOrders(user)" *ngFor="let user of userList">
         <ion-avatar item-start>
             <img src="{{user.imgPath}}">
         </ion-avatar>
