--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -13,11 +13,11 @@
   
   <ion-item>
     <ion-label fixed>账号</ion-label>
-    <ion-input type="text" value="yohome" placeholder="请输入账号" #username></ion-input>
+    <ion-input type="text" value="zp" placeholder="请输入账号" #username></ion-input>
   </ion-item>
-  <ion-item>
+  <ion-item>            
     <ion-label fixed>密码</ion-label>
-    <ion-input type="password" value="test" placeholder="请输入密码" #password></ion-input>
+    <ion-input type="password" value="123456" placeholder="请输入密码" #password></ion-input>
   </ion-item>
 
 <br/><br/><br/>
