--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -44,7 +44,7 @@
        
         </button>
 
-      <button ion-button color="primary" (click)="toArchivesPage()">
+      <button ion-button color="primary" (click)="toArchivesPage(userOrder)">
       
             <ion-icon name="browsers"></ion-icon>
             档案
