--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -25,5 +25,8 @@
     <button ion-button block color="danger" (click)="logIn(username, password)">
       登录
     </button>
+    <button ion-button block color="danger" (click)="testPage()">
+      跳转到测试页面
+    </button>
   </div>
 </ion-content>
