--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,13 +5,14 @@
 </ion-header>
 
 <ion-content padding>
-    <!-- <ion-searchbar [(ngModel)]="search" style='border-left:0px;border-top:0px;border-right:0px;border-bottom:1px '></ion-searchbar> -->
+     <ion-searchbar [(ngModel)]="search" ></ion-searchbar> 
     <!-- |filterUser:search -->
-    <button ion-item (click)="toOrders(user)" *ngFor="let user of userList">
+    <button ion-item (click)="toOrders(user)" *ngFor="let user of userList|filterUser:search">
         <ion-avatar item-start>
             <img src="{{user.imgPath}}">
         </ion-avatar>
-        <p>{{user.name}}<ion-badge item-right style="background-color: red;">{{homeObj.attrName}}</ion-badge></p>
+        <p>{{user.name}}</p>
+        <!-- <ion-badge item-right style="background-color: red;">{{homeObj.attrName}}</ion-badge> -->
         <p>{{user.addr}}</p>
     </button>
 </ion-content>
