--- a/src/pages/home/schedule-complaint/schedule-complaint.html
+++ b/src/pages/home/schedule-complaint/schedule-complaint.html
@@ -43,7 +43,7 @@
 
 </ion-content>
 <ion-footer>
-    <ion-input (change)="complaintReply($event)" [(ngModel)]="replyStr" [(ngModel)]="teststr" (blur)="funBlur()" (focus)="funFocus($event)"
+    <ion-input *ngIf="userType!='user'" (change)="complaintReply($event)" [(ngModel)]="replyStr" [(ngModel)]="teststr" (blur)="funBlur()" (focus)="funFocus($event)"
         placeholder="投诉内容…"></ion-input>
 
     <button ion-button style="width:100%;height:50px;" disabled="disabled" color="dark">投诉电话：0512-66592866-818</button>
