--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -25,8 +25,8 @@
     <button ion-button block color="danger" (click)="logIn(username, password)">
       登录
     </button>
-    <button ion-button block color="danger" (click)="testPage()">
+    <!-- <button ion-button block color="danger" (click)="testPage()">
       跳转到测试页面
-    </button>
+    </button> -->
   </div>
 </ion-content>
