--- a/src/pages/home/user-list-orders-info/user-list-orders-info.html
+++ b/src/pages/home/user-list-orders-info/user-list-orders-info.html
@@ -16,11 +16,11 @@
       <a name="ion{{i}}"></a>
       <ion-item>
         <ion-avatar item-start>
-          <img [src]="userInfo.avatarPath">
+          <img [src]="orderSchedule.img">
         </ion-avatar>
         <ion-row (click)="toMineEditPage()">
           <ion-col>
-            <h2>{{userInfo.name}}</h2>
+            <h2>{{orderSchedule.name}}</h2>
           </ion-col>
           <ion-col> </ion-col>
           <ion-col>
