--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -8,7 +8,7 @@
 
 <ion-content class="bg-color">
 
-    <ion-list>
+  <ion-list>
     <ion-item (click)="edit()">
       <ion-avatar item-left (click)="viewAvatar($event)">
         <img src="{{avatarPath}}">
@@ -17,13 +17,7 @@
       <p>{{userInfo?.description}}</p>
       <ion-icon name='ios-arrow-forward' item-right></ion-icon>
     </ion-item>
-<br/>
-    <ion-item (click)="setting()">
-      <ion-icon name="settings" item-left color="primary"></ion-icon>
-      设置
-      <ion-icon name='ios-arrow-forward' item-right></ion-icon>
-    </ion-item>
-<br/>
+    <br/>
     <!-- <ion-item (click)="edit()">
       <ion-icon name="log-in" item-left color="danger"></ion-icon>
       重新登录
@@ -31,10 +25,22 @@
     </ion-item>
 <br/> -->
     <ion-item (click)="about()">
-      <ion-icon name="information-circle" item-left  color="secondary"></ion-icon>
+      <ion-icon name="information-circle" item-left color="secondary"></ion-icon>
       VIP会员福利
       <ion-icon name='ios-arrow-forward' item-right></ion-icon>
     </ion-item>
-<br/>
+    <br/>
+  </ion-list>
+
+  <ion-list>
+    <ion-item (click)="setting()">
+      <ion-icon name="settings" item-left color="primary"></ion-icon>
+      修改密码
+      <ion-icon name='ios-arrow-forward' item-right></ion-icon>
+    </ion-item>
+    <ion-item (click)="loginOut()">
+      <ion-icon name="log-in" item-left color="primary"></ion-icon>
+      切换账号
+    </ion-item>
   </ion-list>
 </ion-content>
