--- a/src/pages/contact/mine-edit-modal/mine-edit-modal.html
+++ b/src/pages/contact/mine-edit-modal/mine-edit-modal.html
@@ -29,9 +29,9 @@
 
       <ion-item>
         <ion-label floating>个性签名</ion-label>
-        <ion-textarea  formControlName="description"></ion-textarea>
+        <ion-textarea  formControlName="descreption"></ion-textarea>
       </ion-item>
-      <div *ngIf="verifyMessages.description.errorMsg" class="validation-failed">{{verifyMessages.description.errorMsg}}</div>
+      <div *ngIf="verifyMessages.descreption.errorMsg" class="validation-failed">{{verifyMessages.description.errorMsg}}</div>
 
 
       <ion-item>
