--- a/src/pages/about/customer-service/customer-service.html
+++ b/src/pages/about/customer-service/customer-service.html
@@ -9,42 +9,11 @@
 </ion-header>
 
 <ion-content>
-  <div *ngFor="let customer of customerList;let i=index;">
-    <ion-card-content>
-      <p>{{customer.describe}}</p>
-    </ion-card-content>
+  <button ion-item (click)="toCustomerServiceNewPage()">
+            <p>申请售后</p>
+      </button>
+  <button ion-item (click)="toCustomerServiceListPage()">
+            <p>售后详情</p>
+      </button>
 
-    <ion-item>
-      <div padding-vertical>
-        <page-select-pic [max]="6" [allowDelete]="false" [allowAdd]="false" [(fileObjList)]="customer.fileObjList"></page-select-pic>
-      </div>
-    </ion-item>
-  </div>
-  <div style="  margin-top: 10px;
-    margin-left: 10px;">
-    <div>
-      <textarea placeholder="说下您的使用情况吧……" [(ngModel)]="describe" rows="3">{{describe}}</textarea>
-      <hr/>
-    </div>
-
-    <div padding-vertical>
-      <page-select-pic [max]="8" [(fileObjList)]="fileObjList"></page-select-pic>
-    </div>
-  </div>
-  <button ion-button style="width:100%" (click)="newCustomer()">
-               提交
-            </button><br/><br/><br/>
-      <p>一：多种联系方式：400电话、微信公众号、客服管家电话和微信都可以联系我们<br/> 
-          二：客服管家全程参与开工和验收，把控施工质量，确保品质
-    <br/> 三：技术经理定期巡检工地，及时发现问题，确保质量
-    <br/> 四：高管联合施工巡检，检查工地施工现场
-    <br/> 五：定期回访客户，倾听客户心声
-    <br/> 六：为客户开通独立的公众号账户，轻松关注家中的施工进度
-    <br/> 七：您关心的问题，我们承诺24小时之内回复
-    <br/> 八：注册会员，完善的VIP会员福利
-  </p>
 </ion-content>
-<ion-footer>
-  <button ion-button style="width:100%;height:50px;" disabled="disabled" color="dark">客服电话：0512-66592866-818</button>
-
-</ion-footer>
