--- a/src/pages/contact/feed-back/feed-back.html
+++ b/src/pages/contact/feed-back/feed-back.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar hideBackButton="true">
     <ion-title>用户信息反馈</ion-title>
   </ion-navbar>
 </ion-header>
