--- a/src/pages/contact/mine-edit-avatar-modal/mine-edit-avatar-modal.html
+++ b/src/pages/contact/mine-edit-avatar-modal/mine-edit-avatar-modal.html
@@ -13,9 +13,9 @@
     <ion-title>
       设置个人头像
     </ion-title>
-    <ion-buttons>
+    <!-- <ion-buttons>
       <button ion-button (click)="dismiss()">关闭</button>
-    </ion-buttons>
+    </ion-buttons> -->
   </ion-toolbar>
 </ion-header>
 
