--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,5 +1,5 @@
 <ion-header>
-    <ion-navbar>
+    <ion-navbar hideBackButton="true">
         <ion-title>我的客户</ion-title>
     </ion-navbar>
 </ion-header>
@@ -13,8 +13,8 @@
         <ion-avatar item-start>
             <img src="{{user.imgPath}}">
         </ion-avatar>
-        <p>{{user.name}}</p>
-        <!-- <ion-badge item-right style="background-color: red;">{{homeObj.attrName}}</ion-badge> -->
+        <p>{{user.name}}</p>                                                 
+         <ion-badge *ngIf="user.recordNo!='0'" item-right style="background-color: red;">{{user.recordNo}}</ion-badge> 
         <p>{{user.addr}}</p>
     </button>
 </ion-content>
