--- a/src/pages/home/user-list-orders/user-list-orders.html
+++ b/src/pages/home/user-list-orders/user-list-orders.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar hideBackButton="true">
     <ion-title>{{usre.name}}的订单</ion-title>
   </ion-navbar>
 </ion-header>
