--- a/src/pages/schedule-complaint/schedule-complaint.html
+++ b/src/pages/schedule-complaint/schedule-complaint.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar hideBackButton="true">
     <ion-title>scheduleComplaint</ion-title>
   </ion-navbar>
 
