--- a/src/pages/home/user-list-orders-info/user-list-orders-info.html
+++ b/src/pages/home/user-list-orders-info/user-list-orders-info.html
@@ -30,7 +30,7 @@
           </ion-col>
         </ion-row>
   
-        <!-- <p>{{userInfo.description}}</p> -->
+         <p>{{userInfo.describe}}</p> 
       </ion-item>
       <ion-card-content >
         <p  (click)="custJd(orderSchedule)"  style="color: #3b5384">{{orderSchedule.adress}}</p>
